# smallpths

./: run.sh  smallpt-hs.cabal  smallpt-hs.hs
cbits/: smallpt.cpp
