Name:                smallpt-hs
Version:             0.1
Synopsis:            A Haskell port of the smallpt path tracer.
Description:         A Haskell port of the smallpt path tracer.
License:             BSD3
License-file:        LICENSE
Author:              Vo Minh Thu <noteed@gmail.com>
Maintainer:          Vo Minh Thu <noteed@gmail.com>
Stability:           Provisional
Category:            Graphics
Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.6

Source-repository head
  type: git
  location: git://github.com/noteed/smallpt-hs.git

executable smallpt-hs
  main-is:             smallpt-hs.hs

  build-depends:       base >= 4 && < 5,
                       ghc-prim,
                       primitive,
                       unboxed-ref,
                       vector

  -- no -Wall as type signature are purposely missing
  ghc-options:         -O2 -rtsopts -fllvm
